--- a/www/auth/register.html
+++ b/www/auth/register.html
@@ -260,8 +260,15 @@
                     // Save token
                     setAuthToken(result.token);
                     
-                    // Redirect to onboarding
-                    window.location.href = '../onboarding/onboarding.html';
+                    // Redirect to onboarding (preferir SPA para evitar tela preta)
+                    const targetUrl = '../onboarding/onboarding.html';
+                    if (window.smoothNavigate) {
+                        window.smoothNavigate(targetUrl);
+                    } else if (window.SpaRouter && typeof window.SpaRouter.navigate === 'function') {
+                        window.SpaRouter.navigate(targetUrl);
+                    } else {
+                        window.location.href = targetUrl;
+                    }
                 } else {
                     // Show errors
                     if (result.errors) {
