--- a/www/routine.html
+++ b/www/routine.html
@@ -614,7 +614,12 @@
     <script>
         // Verificar autenticação
         if (!isAuthenticated()) {
-            window.location.href = './auth/login.html';
+            const targetUrl = './auth/login.html';
+            if (window.smoothNavigate) {
+                window.smoothNavigate(targetUrl);
+            } else {
+                window.location.href = targetUrl;
+            }
         }
         
         const todoList = document.getElementById('routine-list-todo');
