--- a/www/auth/register.html
+++ b/www/auth/register.html
@@ -261,8 +261,7 @@
                     setAuthToken(result.token);
                     
                     // Redirect to onboarding
-                    const targetUrl = '../onboarding/onboarding.html';
-                    window.location.href = targetUrl;
+                    window.location.href = '../onboarding/onboarding.html';
                 } else {
                     // Show errors
                     if (result.errors) {
