--- a/www/measurements_progress.html
+++ b/www/measurements_progress.html
@@ -1705,8 +1705,7 @@ html, body {
                                 if (typeof clearAuthToken === 'function') {
                                     clearAuthToken();
                                 }
-                                const targetUrl = './auth/login.html';
-                                window.location.href = targetUrl;
+                                window.location.href = './auth/login.html';
                                 return;
                             }
                             
