--- a/www/routine.html
+++ b/www/routine.html
@@ -614,8 +614,7 @@
     <script>
         // Verificar autenticação
         if (!isAuthenticated()) {
-            const targetUrl = './auth/login.html';
-            window.location.href = targetUrl;
+            window.location.href = './auth/login.html';
         }
         
         const todoList = document.getElementById('routine-list-todo');
