chore: migrate auth screens to spa

--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -365,7 +365,7 @@
                     Continuar para o App
                 </a>
 
-                <a href="./onboarding/onboarding.html?refazer=true" class="btn-secondary">
+                <a href="./onboarding.html?refazer=true" class="btn-secondary">
                     Refazer questionário
                 </a>
             </div>
