--- a/www/measurements_progress.html
+++ b/www/measurements_progress.html
@@ -1705,7 +1705,7 @@ html, body {
                                 if (typeof clearAuthToken === 'function') {
                                     clearAuthToken();
                                 }
-                                window.location.href = './auth/login.html';
+                                window.location.href = './login.html';
                                 return;
                             }
                             
