--- a/www/more_options.html
+++ b/www/more_options.html
@@ -455,7 +455,7 @@
             }
             
             // Redirecionar para login
-            window.location.href = './auth/login.html';
+            window.location.href = './login.html';
         }
         
         document.addEventListener('DOMContentLoaded', async function() {
