--- a/www/routine.html
+++ b/www/routine.html
@@ -614,7 +614,7 @@
     <script>
         // Verificar autenticação
         if (!isAuthenticated()) {
-            window.location.href = './auth/login.html';
+            window.location.href = './login.html';
         }
         
         const todoList = document.getElementById('routine-list-todo');
