--- a/www/content.html
+++ b/www/content.html
@@ -351,7 +351,7 @@
     <script>
         // Verificar autenticação
         if (!isAuthenticated()) {
-            window.location.href = './auth/login.html';
+            window.location.href = './login.html';
         }
         
         const contentContainer = document.getElementById('content-container');
@@ -396,7 +396,7 @@
                 
                 if (!result.success) {
                     if (result.message && result.message.includes('Onboarding')) {
-                        window.location.href = './onboarding/onboarding.html';
+                        window.location.href = './onboarding.html';
                         return;
                     }
                     throw new Error(result.message || 'Erro ao carregar conteúdos');
