--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -27,6 +27,7 @@
         }
         console.log('[dashboard] BASE_APP_URL:', window.BASE_APP_URL);
     </script>
+    <script src="./assets/js/auth.js"></script>
     <script src="./assets/js/page-transitions.js"></script>
     
     <style>
@@ -364,7 +365,7 @@
                     Continuar para o App
                 </a>
 
-                <a href="./onboarding.html?refazer=true" class="btn-secondary">
+                <a href="./onboarding/onboarding.html?refazer=true" class="btn-secondary">
                     Refazer questionário
                 </a>
             </div>
