--- a/www/favorite_recipes.html
+++ b/www/favorite_recipes.html
@@ -57,6 +57,9 @@
         }
     </script>
     
+    <!-- Auth Script -->
+    <script src="./assets/js/auth.js"></script>
+    
     <style>
         body {
             -webkit-user-select: none;
