--- a/www/progress.html
+++ b/www/progress.html
@@ -23,6 +23,7 @@
             window.BASE_APP_URL = window.BASE_APP_URL.slice(0, -1);
         }
     </script>
+    <script src="./assets/js/auth.js"></script>
     
     <style>
         /* Layout principal */
