--- a/www/view_recipe.html
+++ b/www/view_recipe.html
@@ -61,6 +61,8 @@
     </script>
     
     <!-- Helpers e Auth -->
+    <script src="./assets/js/common.js"></script>
+    <script src="./assets/js/auth.js"></script>
     <script>
         if (typeof getLocalDateString !== 'function') {
             window.getLocalDateString = function(date = null) {
