--- a/www/auth/register.html
+++ b/www/auth/register.html
@@ -261,7 +261,11 @@
                     setAuthToken(result.token);
                     
                     // Redirect to onboarding
-                    window.location.href = '../onboarding/onboarding.html';
+                    if (window.smoothNavigate) {
+                        window.smoothNavigate('../onboarding/onboarding.html');
+                    } else {
+                        window.location.href = '../onboarding/onboarding.html';
+                    }
                 } else {
                     // Show errors
                     if (result.errors) {
