--- a/www/scan_barcode.html
+++ b/www/scan_barcode.html
@@ -16,6 +16,7 @@
             window.BASE_APP_URL = window.location.origin + window.location.pathname.split('/').slice(0, -1).join('/'); 
         }
     </script>
+    <script src="./assets/js/auth.js"></script>
 
     <style>
         /* === ESTILO PARA SCANNER NATIVO === */
@@ -502,7 +503,12 @@
                         
                         // Usar try-catch no redirecionamento
                         try {
-                            window.location.href = `create_custom_food.html?${params.toString()}`;
+                            const targetUrl = `create_custom_food.html?${params.toString()}`;
+                            if (window.smoothNavigate) {
+                                window.smoothNavigate(targetUrl);
+                            } else {
+                                window.location.href = targetUrl;
+                            }
                         } catch (redirectErr) {
                             console.error('Erro ao redirecionar:', redirectErr);
                             // Fallback: tentar sem parâmetros
@@ -512,7 +518,12 @@
                         // Produto não encontrado
                         const params = new URLSearchParams({ barcode: barcode });
                         try {
-                            window.location.href = `create_custom_food.html?${params.toString()}`;
+                            const targetUrl = `create_custom_food.html?${params.toString()}`;
+                            if (window.smoothNavigate) {
+                                window.smoothNavigate(targetUrl);
+                            } else {
+                                window.location.href = targetUrl;
+                            }
                         } catch (redirectErr) {
                             console.error('Erro ao redirecionar:', redirectErr);
                         }
