Atualização do projeto: sincronização com versão local

--- a/www/add_food_to_diary.html
+++ b/www/add_food_to_diary.html
@@ -1695,13 +1695,7 @@ async function submitAllMeals() {
             showPendingFeedback('Refeições registradas com sucesso! Redirecionando...', true);
             // Sempre usar caminho relativo para manter dentro do app
             const redirectUrl = `./diary.html?date=${encodeURIComponent(pendingItems[0].date_consumed)}`;
-            setTimeout(() => {
-                if (window.smoothNavigate) {
-                    window.smoothNavigate(redirectUrl);
-                } else {
-                    window.location.href = redirectUrl;
-                }
-            }, 500);
+            setTimeout(() => window.location.href = redirectUrl, 500);
             return;
         }
 
