Implementa navegação SPA e corrige recarregamentos automáticos
- Adiciona sistema de navegação SPA (spa-navigation.js) para manter background e navbar fixos
- Corrige recarregamentos automáticos causados por mudanças de rede (WiFi/dados móveis)
- Melhora network-monitor.js para só recarregar quando realmente volta de offline
- Atualiza bottom-nav.js para não recriar nav durante navegação SPA
- Adiciona CSS fixo para background e navbar em _global.css
- Integra spa-navigation.js nas páginas principais (main_app, diary, progress, explore, more_options)

--- a/www/explore_recipes.html
+++ b/www/explore_recipes.html
@@ -59,6 +59,8 @@
     
     <!-- Auth Script -->
     <script src="./assets/js/auth.js"></script>
+    <!-- SPA Navigation - Mantém background e navbar fixos -->
+    <script src="./assets/js/spa-navigation.js"></script>
 
 <style>
         body {
