--- a/www/more_options.html
+++ b/www/more_options.html
@@ -24,6 +24,8 @@
         }
     </script>
     <script src="./assets/js/auth.js"></script>
+    <!-- SPA Navigation - Mantém background e navbar fixos -->
+    <script src="./assets/js/spa-navigation.js"></script>
     
     <style>
 /* CSS do layout nativo para mobile - Mais Opções */
