--- a/www/progress.html
+++ b/www/progress.html
@@ -24,6 +24,8 @@
         }
     </script>
     <script src="./assets/js/auth.js"></script>
+    <!-- SPA Navigation - Mantém background e navbar fixos -->
+    <script src="./assets/js/spa-navigation.js"></script>
     
     <style>
         /* Layout principal */
