Corrige carregamento de dados via SPA e efeito visual de arrastar
- Melhora extração e execução de scripts inline durante navegação SPA
- Corrige execução de IIFEs e códigos de inicialização das páginas
- Adiciona listeners para re-executar loadPageData quando páginas são carregadas via SPA
- Corrige efeito visual de 'arrastar' removendo transforms e ajustando transições
- Adiciona suporte para scripts dentro do app-container
- Dispara eventos DOMContentLoaded e spa-page-loaded para compatibilidade
- Adiciona re-execução automática para main_app, explore_recipes e progress

--- a/www/explore_recipes.html
+++ b/www/explore_recipes.html
@@ -920,6 +920,18 @@ function escapeHtml(text) {
     await loadPageData();
 })();
 
+// Re-executar quando carregado via SPA
+window.addEventListener('spa-page-loaded', function(e) {
+    if (e.detail && e.detail.isSPANavigation) {
+        const pageName = window.location.pathname.split('/').pop();
+        if (pageName === 'explore_recipes.html') {
+            setTimeout(() => {
+                loadPageData();
+            }, 100);
+        }
+    }
+});
+
 document.addEventListener('DOMContentLoaded', function() {
     // Elementos
     const filterBtn = document.getElementById('filter-btn');
