Adiciona Live Reload para desenvolvimento no iPhone
- Cria scripts start-dev.ps1 e stop-dev.ps1 para facilitar desenvolvimento
- Configura Capacitor para usar servidor HTTP local durante desenvolvimento
- Adiciona documentação completa em LIVE-RELOAD-SETUP.md
- Corrige carregamento de dados via SPA em content.html e favorite_recipes.html
- Adiciona listeners spa-page-loaded em todas as páginas principais
- Adiciona scripts npm run dev e npm run dev:stop para facilitar uso

--- a/www/favorite_recipes.html
+++ b/www/favorite_recipes.html
@@ -794,6 +794,18 @@
                 }
             }
             
+            // Re-executar quando carregado via SPA
+            window.addEventListener('spa-page-loaded', function(e) {
+                if (e.detail && e.detail.isSPANavigation) {
+                    const pageName = window.location.pathname.split('/').pop();
+                    if (pageName === 'favorite_recipes.html') {
+                        setTimeout(() => {
+                            loadPageData();
+                        }, 100);
+                    }
+                }
+            });
+            
             // Executar quando DOM estiver pronto
             if (document.readyState === 'loading') {
                 document.addEventListener('DOMContentLoaded', setupFilterModal);
