Corrige erros de re-execução de scripts no SPA
- Adiciona cache de scripts executados para evitar re-execução
- Envolve scripts inline em IIFE para evitar conflitos de escopo
- Adiciona verificações de existência de elementos antes de acessar
- Corrige erros 'already declared' e 'Cannot read properties of null'
- Melhora hash de scripts para evitar duplicatas

--- a/www/main_app.html
+++ b/www/main_app.html
@@ -2678,6 +2678,12 @@
         const dropHeight = 275.785; 
 
         function updateWaterDrop(animated = true) {
+            // Verificar se elementos existem antes de acessar
+            if (!waterLevelGroup || !waterAmountDisplay) {
+                console.warn('[Water Drop] Elementos não encontrados, pulando atualização');
+                return;
+            }
+            
             const percentage = waterGoal > 0 ? Math.min(window.currentWater / waterGoal, 1) : 0;
             const yTranslate = dropHeight * (1 - percentage);
             
