Corrige re-execução de scripts inline no SPA - solução definitiva
PROBLEMA: Scripts inline sendo executados múltiplas vezes causando 'already declared'

SOLUÇÃO:
- Remove TODOS os scripts inline do conteúdo antes de inserir
- Executa APENAS scripts externos durante navegação SPA
- Scripts inline devem usar event listeners (spa-page-loaded) para inicialização
- Adiciona verificação de elementos antes de chamar updateWaterDrop

Isso evita completamente re-declarações de variáveis como:
- bottomNavScript, AUTH_TOKEN_KEY, BASE_URL, missionSlides, checkinData

--- a/www/main_app.html
+++ b/www/main_app.html
@@ -2833,7 +2833,12 @@
             waterUnitSelect.addEventListener('change', updateControlsEnabled);
         }
 
-        updateWaterDrop(false);
+        // Verificar se elementos existem antes de chamar updateWaterDrop
+        const waterLevelGroup = document.getElementById('water-level-group');
+        const waterAmountDisplay = document.getElementById('water-amount-display');
+        if (waterLevelGroup && waterAmountDisplay) {
+            updateWaterDrop(false);
+        }
         updateControlsEnabled();
 
 
