Corrige carregamento de banners quando volta para main_app via SPA
- Adiciona função tryInitCarousel() reutilizável no banner-carousel.js
- Adiciona listener spa-page-loaded para re-inicializar banners
- Chama tryInitCarousel() quando main_app é carregado via SPA
- Garante que banners sejam recarregados ao voltar para a página

--- a/www/main_app.html
+++ b/www/main_app.html
@@ -4571,6 +4571,17 @@ window.addEventListener('spa-page-loaded', function(e) {
                             const data = result.data;
                             renderDashboard(data);
                             dashboardContainer.style.display = 'block';
+                            
+                            // Re-inicializar banners após carregar dados
+                            if (typeof tryInitCarousel === 'function') {
+                                setTimeout(() => {
+                                    tryInitCarousel();
+                                }, 300);
+                            } else if (typeof initLottieCarousel === 'function') {
+                                setTimeout(() => {
+                                    initLottieCarousel();
+                                }, 300);
+                            }
                         } catch (error) {
                             console.error('Erro ao recarregar dashboard via SPA:', error);
                         }
