--- a/www/main_app.html
+++ b/www/main_app.html
@@ -4572,16 +4572,8 @@ window.addEventListener('spa-page-loaded', function(e) {
                             renderDashboard(data);
                             dashboardContainer.style.display = 'block';
                             
-                            // Re-inicializar banners após carregar dados
-                            if (typeof tryInitCarousel === 'function') {
-                                setTimeout(() => {
-                                    tryInitCarousel();
-                                }, 300);
-                            } else if (typeof initLottieCarousel === 'function') {
-                                setTimeout(() => {
-                                    initLottieCarousel();
-                                }, 300);
-                            }
+                            // NÃO re-inicializar banners aqui - o banner-carousel.js já faz isso
+                            // via evento spa-page-loaded, evitando duplicação
                         } catch (error) {
                             console.error('Erro ao recarregar dashboard via SPA:', error);
                         }
