Converte login e register para fragmentos SPA
- Remove DOCTYPE, html, head, body das páginas
- Mantém apenas o conteúdo HTML (main + form)
- Scripts e estilos já estão em arquivos separados
- Router.js já carrega auth_login_logic.js e auth_register_logic.js
- Router.js já carrega auth_login_page.css e auth_register_page.css

--- a/screens/login.html
+++ b/screens/login.html
@@ -1,5 +1,5 @@
-<main class="app-container">
-    <img src="../assets/images/SHAPE-FIT-LOGO.png" alt="Shape Fit Logo" class="login-logo">
+﻿<main class="app-container">
+    <img src="./assets/images/SHAPE-FIT-LOGO.png" alt="Shape Fit Logo" class="login-logo">
     <h1 class="page-title">Acesse sua conta</h1>
     <form id="loginForm" class="login-form">
         <div id="formError" class="form-error" style="display: none;"></div>
@@ -19,4 +19,3 @@
         </p>
     </form>
 </main>
-
