--- a/screens/register.html
+++ b/screens/register.html
@@ -1,5 +1,5 @@
-<main class="app-container">
-    <img src="../assets/images/SHAPE-FIT-LOGO.png" alt="Shape Fit Logo" class="login-logo">
+﻿<main class="app-container">
+    <img src="./assets/images/SHAPE-FIT-LOGO.png" alt="Shape Fit Logo" class="login-logo">
     <h1 class="page-title">Crie sua Conta</h1>
 
     <form id="registerForm" class="register-form" autocomplete="on">
@@ -50,4 +50,3 @@
         </p>
     </form>
 </main>
-
