Corrige login/register: Font Awesome 6, caminhos de imagens e espaçamento
- Atualiza Font Awesome de 5.15.4 para 6.0.0-beta3 (suporta fa-solid)
- Corrige caminho da logo para ./assets/images/ (relativo a www/)
- Adiciona classes login-page-container e register-page-container
- Ajusta CSS para centralizar verticalmente e adicionar padding-top
- Garante que conteúdo não fique colado no topo

--- a/www/screens/login.html
+++ b/www/screens/login.html
@@ -1,4 +1,4 @@
-﻿<main class="app-container">
+﻿<main class="app-container login-page-container">
     <img src="./assets/images/SHAPE-FIT-LOGO.png" alt="Shape Fit Logo" class="login-logo">
     <h1 class="page-title">Acesse sua conta</h1>
     <form id="loginForm" class="login-form">
