--- a/www/screens/register.html
+++ b/www/screens/register.html
@@ -1,4 +1,4 @@
-﻿<main class="app-container">
+﻿<main class="app-container register-page-container">
     <img src="./assets/images/SHAPE-FIT-LOGO.png" alt="Shape Fit Logo" class="login-logo">
     <h1 class="page-title">Crie sua Conta</h1>
 
